[package]
name = "gfx_2021"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
gfx-hal = "0.7"
image = "0.23.12"
log = "0.4"
gfx-auxil = { version = "0.8" }
winit = { version = "0.24", features = ["web-sys"] }
gfx-backend-empty = "0.7.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.8"
glsl-to-spirv = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies.gfx-backend-vulkan]
version = "0.7"
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
version = "0.7"
optional = true

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
version = "0.7"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
version = "0.7"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.7"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.7"
optional = true